# django-API

./: .gitignore  DOCKER_COMMANDS.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: .pre-commit-config.yaml
src/core/: .env.example  asgi.py  permissions.py  urls.py
src/core/apps/: .rest
src/core/apps/accounts/: .rest  admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
src/core/apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_table_and_more.py
src/core/apps/accounts/serializers/: __init__.py  auth_serializers.py  profile_serializers.py  user_serializers.py
src/core/apps/accounts/views/: __init__.py  auth_views.py  profile_views.py  user_views.py
src/core/apps/app1/: apps.py
src/core/apps/courses/: .rest  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/core/apps/courses/migrations/: 0001_initial.py  0002_enroll.py  0003_lessonprogress.py  0004_alter_category_table_alter_course_table_and_more.py  0005_alter_lesson_video_file.py
src/core/apps/courses/serializers/: __init__.py  category_serializers.py  course_serializers.py  enroll_serializers.py  lesson_serializers.py  progress_serializers.py
src/core/apps/courses/views/: __init__.py  category_views.py  (+4 more)
src/core/apps/notifications/: apps.py  consumers.py  models.py  permissions.py  serializers.py  signals.py  test_ws.py  urls.py  views.py
src/core/apps/reviews/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/core/settings/: __init__.py  base.py  production.py
(+3 files in other folders)
